--- a/upload/templates/index.html
+++ b/upload/templates/index.html
@@ -1,5 +1,6 @@
 
 <h2>Note Page</h2>
+<button onclick="location.href='../post/'" type="button">upload</button>
 {% block body %}
 
 {% for n in note %}
