--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -9,6 +9,7 @@
   <h4>{{n.title}}</h4>
   <span><b>Intro: </b>{{n.intro}} </span>
   <button onclick="location.href='../detail/{{ n.idnote }}/'" type="button">deatil</button>
+  <button onclick="location.href='../update/{{ n.idnote }}/'" type="button">edit</button>
 </div>
 {% endfor %}
 
