--- a/upload/templates/upload/update.html
+++ b/upload/templates/upload/update.html
@@ -5,7 +5,9 @@
     <title>修改資料</title>
 
 </head>
+
 <body>
+  {% if note_list.permission == 1 or note_list.user_id == request.user.id%}
     <form action="." method="POST" name="form2">
         {% csrf_token %}  <!-- 啟動CSRF防護，保護伺服器避免被攻擊 -->
         <div>標題：    <input type="text" name="title" value="{{ note_list.title }}"> </div>
@@ -17,5 +19,9 @@
                         <input type="radio" name="permission" value="0"/>不可共編 </div>
         <input type="submit" value="送出資料">
     </form>
+    {%else%}
+    無使用權限
+    {% endif %}
+
 </body>
 </html>
