Install redis (try to keep under 50 characters)
Other samll changes

--- a/upload/templates/upload/edit_note.html
+++ b/upload/templates/upload/edit_note.html
@@ -36,7 +36,7 @@
           //console.log(newv+"\n");
         })
         simplemde.value($('#id_form-'+current+'-note').val()); //Initialize with list one content
-
+        $('#root .link-formset:last').remove();
 
         setInterval(function(){  $('#id_form-'+current+'-note').val(simplemde.value()); }, 500); //Autosave to hidden input
 
