--- a/upload/templates/upload/detail_note.html
+++ b/upload/templates/upload/detail_note.html
@@ -1,6 +1,5 @@
 <head>
   {% load static %}
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
@@ -8,26 +7,41 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
   <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
   <script>
-
     var simplemde;
     /*svar text = "{{ notetext }}";
     text = text.replace(/&quot;/g,'"');
     text = JSON.parse(text);
     console.log(text);*/
     $(document).ready(function(){
-
         simplemde = new SimpleMDE({ element: document.getElementById("MyID") });
         //simplemde.value("{{ notetext.0 }}");
-
-
-
     });
     function change(index){
       //simplemde.value(""+text[index-1].fields.note+"");
       simplemde.value(index);
     }
-  </script>
 
+  </script>
+<script type="text/javascript">
+  $(function(){
+      $("#submit").click(function(){
+        var mes = $("#message").val();
+          $.ajax({
+              url: '/upload/refresh/{{noteid}}/',
+              type : "POST",
+              dataType : 'JSON',
+              data : mes,
+              success : function(data) {
+                 append("  {% csrf_token %}")
+              },
+              error: function(error) {
+                  alert(error);
+              }
+          })
+      });
+
+  });
+</script>
    <!--<link rel="stylesheet" href="./explain.css">-->
   <title>detail</title>
 </head>
@@ -46,4 +60,21 @@
 <textarea id="MyID" style="width:600px;"></textarea>
 
 
+{% endblock %}
+<form>
+    {% csrf_token %}
+{% for m in message %}
+
+  {% if m.note_id == noteid %}
+    <li>{{m.message}}</li>
+  {% endif %}
+{% endfor %}
+</form>
+
+{% block content %}
+<form method="POST" name="form2">
+  {% csrf_token %}
+  <div>  <input type="text" id="message" name="message"/> </div>
+  <input id='submit' type="button" value="送出資料"/>
+</form>
 {% endblock %}
