note rest & create person rest

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -2,6 +2,7 @@
 <ul>
   <h3>Hi {{ request.user.username }} </h3>
   <button onclick="location.href='/upload/index/'" type="button">Note Page</button>
+  <button onclick="location.href='/person/index/'" type="button">person</button>
   <!--{% for pet in allpet %}
   <li><a href="#"></a>{{pet.id}} {{pet.owner}}{{pet.name}}</li>
   {% endfor %}-->
