--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -1,6 +1,6 @@
 
 <h2>Note Page</h2>
-<button onclick="location.href='../post/'" type="button">upload</button>
+<button onclick="location.href='../create/'" type="button">upload</button>
 {% block body %}
 
 {% for n in note %}
