--- a/upload/templates/upload/create_note.html
+++ b/upload/templates/upload/create_note.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>表單傳送範例</title>
+    <title>新增筆記</title>
 </head>
 <body>
     <form action="." method="POST" name="form1">
