--- a/login/templates/login/form_template.html
+++ b/login/templates/login/form_template.html
@@ -1,7 +1,7 @@
 {% for field in form %}
-  <div>
+  <div class="in">
       <span>{{ field.error }}</span>
       <label>{{ field.label_tag}}</label>
-      <div>{{ field }}</div>
+      {{ field }}
   </div>
 {% endfor %}
