--- a/login/static/css/style.css
+++ b/login/static/css/style.css
@@ -1,47 +1,55 @@
 body {
-  background: url("background.jpg");
+  background: #f0eec9;
   background-repeat: no-repeat;
   background-size: cover;
 }
 h1 {
-  color: #FCA205;
+  color: #07a4b5;
+  font-size: 60px;
   font-family: "Comic Sans MS", cursive, sans-serif;
-  margin-left: 10%;
 }
 .reg {
-  font-size: 60px;
-  margin-left: 47%;
-  margin-bottom: 10px;
+  width: 350px;
+  height: 100px;
+  position:relative;
+  margin: auto;
+  text-align:center;
+}
+.buttonBox {
+  width:550px;
+  height:50px;
+  padding-top: 8%;
+  padding-left: 12.5%;
+  margin-bottom: 20px;
+}
+.box {
+  width:550px;
+  height:auto;
+  position:relative;
+  margin: auto;
+  background: #4ba2ac;
+  border-radius: 8px;
 }
 
-.box {
-  width:500px;
-  height:300px;
-  position:relative;
-  top:30%;
-  left:40%;
-}
-.regBox {
-  width:500px;
-  height:650px;
-  position:relative;
-  top:30%;
-  left:40%;
+.form {
+  padding-top: 15%;
 }
 label {
-  color: #ffffff;
-  font-size: 25px;
+  color: #000000;
+  font-size: 20px;
   font-family: "Comic Sans MS", cursive, sans-serif;
   padding-right: 20px;
   width:140px;
 }
 input
 {
+  width: 276px;
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-size: 20px;
-  color : #ffffff;
+  color : #000000;
   background-color: transparent;
-  border-style:none;
+  border-radius: 4px;
+  border-style:solid;
 }
 .in label input div{
   width:500px;
@@ -50,42 +58,33 @@ input
 }
 .in {
   margin-bottom: 15px;
-  border:1px;
-  border-bottom-style: solid;
-  border-top-style: none;
-  border-left-style:none;
-  border-right-style:none;
-  color : #ffffff;
+  color : #000000;
+  padding-left: 12.5%;
 }
+
 .register h1 button div textarea{
   width:500px;
   height:500px;
   display: inline;
 }
 button {
-  background-color: transparent;
-  border-style:none;
-  float: right;
-  margin-right: 10%;
+  width: 210px;
+  height: 45px;
+  font-size: 25px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  border: 0px;
 }
 form button {
   height: 40px;
-  width: 500px;
-  background-color: rgba(179, 179, 204,0.65);
+  width: 400px;
+  background-color: #50c9ba;
   border: 0px;
-  font-family: "Comic Sans MS", cursive, sans-serif;
   font-size: 28px;
-  margin-top: 25px;
-  margin-right: 0%;
+  margin-top: 10%;
+  margin-left: 14%;
+  margin-bottom: 10%;
 }
-.regBox p {
-  border:1px;
-  border-bottom-style: solid;
-  border-top-style: none;
-  border-left-style:none;
-  border-right-style:none;
-  color : #ffffff;
-}
+
 h4 {
   color: #ff0000;
 }
@@ -94,7 +93,10 @@ li {
 }
 textarea {
   background-color: transparent;
-  border-style:none;
+  border-style:solid;
+  border-color: #000000;
+  border-radius: 4px;
+  border-width: 2px;
   font-size: 20px;
   height: 150px;
 }
