--- a/login/templates/login/regist_form.html
+++ b/login/templates/login/regist_form.html
@@ -4,21 +4,33 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <title>Join us</title>
 </head>
-  <h1 class="reg">Welcome</h1>
+  <div class="reg">
+    <h1>Welcome</h1>
+  </div>
   <body>
+    <div class="box">
+      <div class="buttonBox">
+        <button onclick="location.href='/login/login/'" type="button" style="background:#9ee6cf;">Login
+          <button onclick="location.href='/login/register/'" type="button" style="background:#50c9ba;">Register</button>
+        </button>
+      </div>
+      <div class="form">
+        <form action='' method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="in">
+            {{ user_form.as_p}}
+            {{ profile_form.as_p }}
+          </div>
+          <button type="submit">submit</button>
+        </form>
+      </div>
+    </div>
     <ul class="messages">
         {% for message in messages %}
         <H4 {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</H4>
         {% endfor %}
     </ul>
-    <form action='' method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <div class="regBox">
-        {{ user_form.as_p}}
-        {{ profile_form.as_p }}
-        <button type="submit">submit</button>
-      </div>
-    </form>
   </body>
 </html>
