--- a/login/templates/login/regist_form.html
+++ b/login/templates/login/regist_form.html
@@ -23,7 +23,7 @@
             {{ user_form.as_p}}
             {{ profile_form.as_p }}
           </div>
-          <button type="submit">submit</button>
+          <button type="submit">next</button>
         </form>
       </div>
     </div>
