--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -29,6 +29,10 @@
         <button onclick="location.href='../update/{{ note.idnote }}/'" type="button">edit</button>
         <button onclick="location.href='../addComment/{{ note.idnote }}/'" type="button">addComment</button>
         <button onclick="location.href='../Comment/{{ note.idnote }}/'" type="button">comment</button>
+        <form action="../addLike/{{ note.idnote }}/" method="POST" name="form">
+          {% csrf_token %} 
+          <input type='submit' value="add Like">
+        </form>
     </div>
     {% endfor %}
   </div>
