上傳圖片，還未使用ajax

--- a/person/templates/person/index.html
+++ b/person/templates/person/index.html
@@ -2,4 +2,5 @@
   <h1>Person</h1>
   <button onclick="location.href='../note/'" type="button">note</button>
   <button onclick="location.href='../profile/'" type="button">profile</button>
+  <button onclick="location.href='../upload/'" type="button">upload</button>
 </html>
