--- a/person/templates/person/uploadImg.html
+++ b/person/templates/person/uploadImg.html
@@ -2,13 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <title>图片上传</title>
+    <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
 </head>
+
 <body>
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="." method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <input type="file" name="img">
+        <input type="file" name="img" id='photo'>
+        <img id="photo_img" src="#" style="height: 100px; width: 100px"/>
         <input type="submit" value="上传">
+
     </form>
+    <script>
+    $("#photo").change(function(){
+      readURL(this);
+    });
+    function readURL(input){
+      if(input.files && input.files[0]){
+        var reader = new FileReader();
+        reader.onload = function (e) {
+           $("#photo_img").attr('src', e.target.result);
+        }
+        reader.readAsDataURL(input.files[0]);
+      }
+    }
+  </script>
 </body>
 </html>
